AmicarDP/src/objects/Remate__c.object
<CustomObject>
    <fields>
        <fullName>Aceptada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aceptada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <label>Checklist</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entidad_Financiera__c</fullName>
        <label>Entidad Financiera</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Entidades_Financieras</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APPROVED</fullName>
                    <label>Aprobado</label>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                    <label>Rechazado</label>
                </value>
                <value>
                    <fullName>CONDITIONAL</fullName>
                    <label>Condicionado</label>
                </value>
                <value>
                    <fullName>WINNER</fullName>
                    <label>Ganadora</label>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                    <label>Caducada</label>
                </value>
                <value>
                    <fullName>SIMULATION_SENT</fullName>
                    <label>Solicitud en análisis de riesgo</label>
                </value>
                <value>
                    <fullName>AWARDED</fullName>
                    <label>Crédito adjudicado</label>
                </value>
                <value>
                    <fullName>CHECKLIST_REJECTED</fullName>
                    <label>Rechazado por checklist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ganadora__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ganadora</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_remate__c</fullName>
        <externalId>true</externalId>
        <label>Id remate</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Orden__c</fullName>
        <label>Orden</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solicitud__c</fullName>
        <label>Solicitud</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Remates</relationshipLabel>
        <relationshipName>Remates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Evaluación</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Código de Remate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>